# myelin

./: Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
.tau/: project.toml
chanapi/: Cargo.toml
chanapi-ariel-os-test/: Cargo.toml  laze-project.yml
chanapi-ariel-os-test/src/: main.rs
chanapi-macros/: Cargo.toml
chanapi-macros/src/: emit.rs  lib.rs  parse.rs
chanapi-macros/tests/: ui.rs
chanapi-macros/tests/ui/: fail_api_id_overflow.rs  fail_api_id_overflow.stderr  fail_borrowed_arg.rs  fail_borrowed_arg.stderr  fail_destructure_arg.rs  fail_destructure_arg.stderr  fail_generics.rs  fail_generics.stderr  fail_lifetime.rs  fail_lifetime.stderr  fail_mut_self.rs  fail_mut_self.stderr  fail_supertrait.rs  fail_supertrait.stderr  fail_unknown_attr_key.rs  fail_unknown_attr_key.stderr  fail_where_clause.rs  fail_where_clause.stderr  pass_api_id_hash.rs  pass_basic.rs
chanapi/src/: block_on.rs  channel.rs  error.rs  lib.rs  transport.rs  transport_embassy.rs  transport_postcard.rs  transport_tokio.rs
chanapi/src/io/: blocking.rs  cursor.rs  local_lock.rs  mod.rs
chanapi/src/stream/: duplex.rs  framing.rs  mod.rs  mux.rs  routing.rs  transport.rs
chanapi/src/transport_embassy/: client.rs  mod.rs  server.rs
chanapi/tests/: duplex_smol_integration.rs  service_macro.rs
myelin/: Cargo.toml
myelin-ariel-os-test/: Cargo.toml  laze-project.yml
myelin-ariel-os-test/src/: main.rs
myelin-macros/: Cargo.toml
myelin-macros/src/: emit.rs  lib.rs  parse.rs
myelin-macros/tests/: ui.rs
myelin-macros/tests/ui/: fail_api_id_overflow.rs  fail_api_id_overflow.stderr  fail_borrowed_arg.rs  fail_borrowed_arg.stderr  fail_destructure_arg.rs  fail_destructure_arg.stderr  fail_generics.rs  fail_generics.stderr  fail_lifetime.rs  fail_lifetime.stderr  fail_mut_self.rs  fail_mut_self.stderr  fail_supertrait.rs  fail_supertrait.stderr  fail_unknown_attr_key.rs  fail_unknown_attr_key.stderr  fail_where_clause.rs  fail_where_clause.stderr  pass_api_id_hash.rs  pass_basic.rs
myelin/src/: block_on.rs  error.rs  lib.rs  transport_postcard.rs  transport_smol.rs
myelin/src/io/: blocking.rs  futures_io.rs  local_lock.rs  mem_pipe.rs  mod.rs  tokio_io.rs
myelin/src/stream/: codec.rs  duplex.rs  framing.rs  mod.rs  mux.rs  routing.rs  transport.rs
myelin/src/transport_embassy/: client.rs  mod.rs  service.rs
myelin/tests/: cbor_stream_integration.rs  duplex_smol_integration.rs  large_router_smoke.rs  service_macro.rs
testing/: Cargo.toml
testing-service/: Cargo.toml
testing-service/src/: lib.rs
testing-stdio/: Cargo.toml
testing-stdio/src/: main.rs  transport.rs
testing/src/: main.rs
