[package]
name = "chanapi"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
tokio = ["std", "dep:tokio"]
embassy = ["dep:embassy-sync", "dep:static_cell"]
postcard = ["std", "dep:postcard", "dep:serde"]

[dependencies]
chanapi-macros = { path = "../chanapi-macros", version = "0.1" }
atomic-waker = "1.1"
tokio = { version = "1", features = ["sync"], optional = true }
embassy-sync = { version = "0.7", optional = true }
paste = "1"
postcard = { version = "1", features = ["use-std"], optional = true }
serde = { version = "1", optional = true }
static_cell = { version = "2", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
