[package]
name = "chanapi"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []
tokio = ["std", "dep:tokio"]
# Async I/O adapter over `tokio::io::AsyncRead`/`AsyncWrite`.
tokio-io = ["std", "dep:tokio", "tokio/io-util"]
embassy = ["dep:embassy-sync", "dep:static_cell"]
postcard = ["std", "dep:postcard", "dep:serde"]
# Async I/O adapter over `futures_io::AsyncRead`/`AsyncWrite`.
futures-io = ["std", "dep:futures-io"]
# Local `smol`-compatible transport using `async-channel`.
smol = ["std", "dep:async-channel", "dep:futures-lite"]
# Expose the io test helpers (`cursor`, `mem_pipe`) to downstream crates.
io-test-utils = ["std"]

[dependencies]
chanapi-macros = { path = "../chanapi-macros", version = "0.1" }
atomic-waker = "1.1"
tokio = { version = "1", features = ["sync"], optional = true }
embassy-sync = { version = "0.7", optional = true }
paste = "1"
postcard = { version = "1", features = ["use-std"], optional = true }
serde = { version = "1", optional = true }
static_cell = { version = "2", default-features = false, optional = true }
futures-io = { version = "0.3", optional = true, default-features = false, features = ["std"] }
async-channel = { version = "2", optional = true }
futures-lite = { version = "2", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "net"] }
futures-lite = { version = "2", default-features = false, features = ["std"] }
smol = "2"
