[package]
name = "myelin"
version = "0.1.0"
edition = "2024"
description = "Define async service APIs as traits, communicate over channels. Transport and serialization are pluggable."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kaspar030/myelin"
keywords = ["async", "rpc", "channels", "embassy", "no_std"]
categories = ["asynchronous", "embedded", "network-programming"]
readme = "../README.md"

[features]
default = []
std = []
tokio = ["std", "dep:tokio", "myelin-macros/tokio"]
# Async I/O adapter over `tokio::io::AsyncRead`/`AsyncWrite`.
tokio-io = ["std", "dep:tokio", "tokio/io-util"]
embassy = ["dep:embassy-sync", "dep:static_cell", "myelin-macros/embassy"]
postcard = ["std", "dep:postcard", "dep:serde"]
# CBOR codec over any stream (self-describing, debuggable wire format).
cbor = ["std", "dep:minicbor-serde", "dep:serde", "minicbor-serde/std"]
# Async I/O adapter over `futures_io::AsyncRead`/`AsyncWrite`.
futures-io = ["std", "dep:futures-io"]
# Local `smol`-compatible transport using `async-channel`.
smol = ["std", "dep:async-channel", "dep:futures-lite"]
# Expose the io test helpers (`cursor`, `mem_pipe`) to downstream crates.
io-test-utils = ["std"]

[dependencies]
myelin-macros = { path = "../myelin-macros", version = "0.1" }
atomic-waker = "1.1"
tokio = { version = "1", features = ["sync"], optional = true }
embassy-sync = { version = "0.7", optional = true }
paste = "1"
postcard = { version = "1", features = ["use-std"], optional = true }
minicbor-serde = { version = "0.6", optional = true, default-features = false }
serde = { version = "1", optional = true }
static_cell = { version = "2", default-features = false, optional = true }
futures-io = { version = "0.3", optional = true, default-features = false, features = ["std"] }
async-channel = { version = "2", optional = true }
futures-lite = { version = "2", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "net"] }
futures-lite = { version = "2", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
smol = "2"
