[package]
name = "testing-service"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
embassy = ["myelin/embassy"]
serde = ["dep:serde"]
tokio = ["myelin/tokio"]

[dependencies]
myelin = { path = "../myelin" }
serde = { version = "1", features = ["derive"], optional = true }
